Add endpoints definition
