# src/app/views/partners.py
@@ -10,7 +10,9 @@ partners_blueprint = Blueprint('partners', __name__, url_prefix='/partners')
 
 @partners_blueprint.route('/<int:id>', methods=['GET'])
 def get_partner(id: int) -> tuple:
-    return 'get_by_id', 200
+    partner: Partner = Partner.query.filter_by(id=id).first()
+
+    return partner_serializer.dump(partner), 200
 
 
 @partners_blueprint.route('/', methods=['POST'])
@@ -29,3 +31,8 @@ def create_partner() -> tuple:
 
     # TODO: try https://stackoverflow.com/a/56515229/6658955
     return partner_serializer.dump(partner), 201
+
+
+@partners_blueprint.route('/search', methods=['GET'])
+def search_partner() -> tuple:
+    return 'search', 200
